--- a/styleres.css
+++ b/styleres.css
@@ -20,7 +20,7 @@ body.reservation-page {
 }
 
 .reservation-nav .back-link {
-  color: #d535d0;
+  color:black;
   font-weight: 600;
   text-decoration: none;
   border-bottom: 2px solid transparent;
