--- a/style.css
+++ b/style.css
@@ -708,7 +708,8 @@ footer p {
 
 #reviews-list {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   gap: 0.8rem;
 }
 
